name:                traffic-analysis
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable traffic-analysis
  main-is:             Main.hs
  other-modules:       Network.Traffic.Object
                       , Network.Traffic.Object.Enumerator
                       , Network.Traffic.Object.Types
                       , Network.Traffic.Object.Reader
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                       , bytestring >= 0.10.4.0 && <0.10.5
                       , cassava >= 0.4.2.1 && <0.4.3
                       , containers >= 0.5.5.1 && <0.5.6
                       , vector >= 0.10.12.2 && <0.10.13
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields