name:                traffic-analysis
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable traffic-analysis
  main-is:             Main.hs
  other-modules:       CommandLineParser
                       , Repl
                       , Network.Traffic.Object
                       , Network.Traffic.Object.Enumerator
                       , Network.Traffic.Object.Types
                       , Network.Traffic.Object.Reader
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                       , async >= 2.0.2 && <2.1
                       , bytestring >= 0.10.4.0 && <0.10.5
                       , cassava >= 0.4.2.1 && <0.4.3
                       , containers >= 0.5.5.1 && <0.5.6
                       , deepseq >= 1.3.0.2 && <1.3.1
                       , monad-par >= 0.3.4.7 && <0.3.5
                       , mtl >= 2.2.1 && <2.3
                       , parsec >= 3.1.8 && <3.2
                       , readline >= 1.0.3.0 && <1.1
                       , text >= 1.2.0.3 && <1.2.1
                       , vector >= 0.10.12.2 && <0.10.13
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -threaded