name:                traffic-analysis
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable traffic-analysis
  main-is:             Main.hs
  other-modules:       CommandLineParser
                       , Repl
                       , Network.Traffic.Object
                       , Network.Traffic.Object.Counter
                       , Network.Traffic.Object.Enumerator
                       , Network.Traffic.Object.Filter
                       , Network.Traffic.Object.Timeline
                       , Network.Traffic.Object.Types
                       , Network.Traffic.Object.Reader
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                       , async
                       , bytestring
                       , cassava
                       , containers
                       , deepseq
                       , monad-par
                       , mtl
                       , parsec
                       , readline
                       , text
                       , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -threaded